--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express-handlebars": "^5.3.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.3"
+  },
+  "engines": {
+    "node" : "14.17.1"
   }
 }
