--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.3"
   },
   "engines": {
-    "node" : "14.17.1"
+    "node": "14.17.1"
   }
 }
